restructured passwd.js for better compression.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-purifycss": "^0.2.0",
     "gulp-svgmin": "^2.2.0",
+    "gulp-terser": "^1.2.0",
     "gulp-uglify": "^3.0.2"
   },
   "dependencies": {}
