--- a/package.json
+++ b/package.json
@@ -35,10 +35,18 @@
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^3.0.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-purifycss": "^0.2.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.1.0",
     "gulp-svgmin": "^2.2.0",
     "gulp-terser": "^1.2.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^4.14.0",
+    "postcss-sorting": "^5.0.1",
+    "through2": "^3.0.1"
   },
   "dependencies": {}
 }
