--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,57 +8,77 @@
     "description": "Cryptographically Strong Random Password Generator app that creates complex strong passowrd. The passwords are generated client side without sending any information to an external machine/server.",
     "icons": [
         {
-            "src": "img/icons/f-16x16.png",
+            "src": "img/icons/favicon-16x16.png",
             "sizes": "16x16",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-24x24.png",
+            "src": "img/icons/favicon-24x24.png",
             "sizes": "24x24",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-32x32.png",
+            "src": "img/icons/favicon-32x32.png",
             "sizes": "32x32",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-36x36.png",
+            "src": "img/icons/android-chrome-36x36.png",
             "sizes": "36x36",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-48x48.png",
+            "src": "img/icons/android-chrome-48x48.png",
             "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-64x64.png",
+            "src": "img/icons/favicon-64x64.png",
             "sizes": "64x64",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-72x72.png",
+            "src": "img/icons/android-chrome-72x72.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-96x96.png",
+            "src": "img/icons/android-chrome-96x96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-128x128.png",
+            "src": "img/icons/favicon-128x128.png",
             "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-256x256.png",
+            "src": "img/icons/android-chrome-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icons/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icons/favicon-194x194.png",
+            "sizes": "194x194",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icons/android-chrome-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "img/icons/f-512x512.png",
+            "src": "img/icons/android-chrome-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icons/android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
