added a custom domain env for gh-deploy action.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,3 +17,4 @@ jobs:
                 BRANCH: gh-pages
                 FOLDER: dist
                 BUILD_SCRIPT: "npm install && npm run build && rm -rf node_modules"
+                CNAME: passwd.sawmon-and-natalie.com
