--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,5 @@ jobs:
                 BASE_BRANCH: master
                 BRANCH: gh-pages
                 FOLDER: dist
-                BUILD_SCRIPT: "npm install && npm run build && rm -rf node_modules"
+                BUILD_SCRIPT: "npm install && npm run build"
                 CNAME: passwd.sawmon-and-natalie.com
